infra/configs/namespaces/test/network-policy.yaml
# by default K3S uses the following IP addresses/ranges
#  cluster api server, services: 10.43.0.0/16
#  pods: 10.42.0.0/16
#  cluster dns: 10.43.0.10
#
#  https://docs.k3s.io/cli/server?_highlight=10.43.0#networking
#
# 1. pods in same namespace can communicate freely
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: same-ns-only
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}

---
# 2. allow pods to access DNS service, the address range
#    depeonds on the cluster network setup
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dns
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: UDP
          port: 53

---
# 3.1 allow traefik ingress
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traefik-ingress
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik

---
# 3.2 allow knative-serving
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-knative-serving
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kourier-system
          podSelector:
            matchLabels:
              app: 3scale-kourier-gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: knative-serving
          podSelector:
            matchLabels:
              app.kubernetes.io/name: knative-serving

---
# 4.1 allow ingress and egree for pods in infra namespaces
#    in order to allow communication with monitoring agents etc
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-infra
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra

---
# 4.2 allow ingress and egree for pods in cnpg namespace
#      enable this if using CNPG to manage PostgreSQL servers
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system

---
# 5. allow egress to K8S api server
# the cidr range is broad, hopefully it works in most setups
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-k8s-api-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443

---
# 6. allow egress to hosts external to the cluster
# *** Keep this policy at the last ***, since it has a broad blocking rules
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-cluster-external-egress
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.42.0.0/16
              - 10.43.0.0/16
